--- a/ia_cc_report/report/paper_format_view.xml
+++ b/ia_cc_report/report/paper_format_view.xml
@@ -2,18 +2,34 @@
 
 <odoo>
   <data>
+  <!--	
+  	<record id="paperformat_us" model="report.paperformat">
+            <field name="name">US Letter</field>
+            <field name="default" eval="True" />
+            <field name="format">Letter</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Portrait</field>
+            <field name="margin_top">40</field>
+            <field name="margin_bottom">25</field>
+            <field name="margin_left">7</field>
+            <field name="margin_right">7</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">35</field>
+            <field name="dpi">90</field>
+    </record>-->
   	
   	<record id="paperformat_my_cc_report1" model="report.paperformat">
         <field name="name">Paper Format(Sales Order, PRO-FORMA INVOICE, Invoices, Commercial Invoices)</field>
         <field name="default" eval="True" />
-        <field name="format">A4</field>
+        <field name="format">Letter</field>
         <field name="page_height">0</field>
         <field name="page_width">0</field>
-        <field name="orientation">Landscape</field>
+        <field name="orientation">Portrait</field>
         <field name="margin_top">62</field>
         <field name="margin_bottom">45</field>
-        <field name="margin_left">1</field>
-        <field name="margin_right">1</field>
+        <field name="margin_left">7</field>
+        <field name="margin_right">7</field>
         <field name="header_line" eval="False" />
         <field name="header_spacing">55</field>
         <field name="dpi">130</field>
@@ -22,14 +38,14 @@
     <record id="po_dp_paperformat_cc_report2" model="report.paperformat">
         <field name="name">Paper Format(Purchase Order, Request For Quotation, Picking Operations, Delivery Slip)</field>
         <field name="default" eval="True" />
-        <field name="format">A4</field>
+        <field name="format">Letter</field>
         <field name="page_height">0</field>
         <field name="page_width">0</field>
-        <field name="orientation">Landscape</field>
+        <field name="orientation">Portrait</field>
         <field name="margin_top">57</field>
         <field name="margin_bottom">25</field>
-        <field name="margin_left">1</field>
-        <field name="margin_right">1</field>
+        <field name="margin_left">7</field>
+        <field name="margin_right">7</field>
         <field name="header_line" eval="False" />
         <field name="header_spacing">52</field>
         <field name="dpi">130</field>
