--- a/ia_cc_report/report/picking_operation.xml
+++ b/ia_cc_report/report/picking_operation.xml
@@ -62,7 +62,7 @@
             </xpath>
             <xpath expr="//table[1]/thead/tr/th[@t-if='o.origin']" position="after">
             	<th><strong>Delivery</strong></th>
-            	<th><strong>Commitment Date</strong></th>
+            	<th class="text-center"><strong>Commitment Date</strong></th>
             	<th><strong>Carrier</strong></th>
             </xpath>
             <xpath expr="//table[1]" position="after">
@@ -144,8 +144,8 @@
             	<td>
                     <span t-field="o.state"/>
                 </td>
-                <td>
-                    <span t-field="o.scheduled_date"/>
+                <td class="text-center">
+                    <span t-field="o.date_done" t-options="{'widget': 'date'}"/>
                 </td>
                 <td>
                      <span t-field="o.carrier_id"/>
