--- a/ia_cc_report/report/report_sale_order_view.xml
+++ b/ia_cc_report/report/report_sale_order_view.xml
@@ -12,7 +12,7 @@
                         <t t-set="colspan" t-value="5"/>
                         <th class="text-left">Product Name</th>
                         <th class="text-left">Pack Size</th>
-                        <th class="text-left">INCI Name</th>
+<!--                        <th class="text-left">INCI Name</th-->
                         <th class="text-left">Batch Number</th>
                         <th class="text-right">Quantity</th>
                         <th class="text-right">Unit Price</th>
@@ -21,7 +21,7 @@
                             <!-- TODO: remove in master -->
                             <t t-set="colspan" t-value="colspan+1"/>
                         </th>
-                        <th class="text-right">Taxes</th>
+<!--                        <th class="text-right">Taxes</th-->
                         <th class="text-right" groups="account.group_show_line_subtotals_tax_excluded" >
                         	Amount
                         </th>
@@ -45,7 +45,7 @@
                                 <td>
 	                            		<span t-field="line.product_packaging.qty"/>
                             	</td>
-                                <td><span t-field="line.product_id.x_studio_field_xYGHQ"/></td>
+<!--                                <td><span t-field="line.product_id.x_studio_field_xYGHQ"/></td-->
                                 <td></td>
                                 <td class="text-right">
                                     <span t-esc="'%.2f' % line.product_uom_qty"/>
@@ -57,9 +57,9 @@
                                 <td t-if="display_discount" class="text-right" groups="sale.group_discount_per_so_line">
                                     <span t-field="line.discount"/>
                                 </td>
-                                <td class="text-right">
+                               <!-- <td class="text-right"> 
                                     <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_id))"/>
-                                </td>
+                                </td>-->
                                 <td class="text-right o_price_total">
                                   <span t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
                                   <span t-field="line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
