--- a/ia_cc_report/report/invoice_report_view.xml
+++ b/ia_cc_report/report/invoice_report_view.xml
@@ -267,7 +267,7 @@
 	         			FOB Shipment to Melbourne, VIC<br/>
 						2FCLs Container Numbers CSNU1287997 / SEGU1538324<br/><br/>
 						Please Pay by Electronic Bank Transfer<br/>
-						CONCEPT CHEMICAL CORPORTAION Pty Ltd Account No:034702-834806 Westpac Bank SWIFT Code:WPACAU25<br/>
+						CONCEPT CHEMICAL CORPORATION Pty Ltd Account No:034702-834806 Westpac Bank SWIFT Code:WPACAU25<br/>
 						Email Remitance to accounts@conceptchemical.com.au<br/>
 						For Credit Card payments, please call 1612 9498 7600
 					    </td>
